--- a/14sz/Ip2/10.09_Js/js.html
+++ b/14sz/Ip2/10.09_Js/js.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <!-- <script src="js.js"></script> -->
+    <script src="progtetelfuggveny.js"></script>
 </body>
 </html>
